--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+
+:root {
+  --primary-color: #59981a;
+  --second-color: #3b5704;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -33,22 +39,29 @@ header .contenedor {
   height: 700px;
 }
 
-header .menu {
+header .menu__header {
   width: 100%;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+}
+
+header .menu__item {
+  list-style: none;
   text-align: right;
 }
 
-header .menu a {
+header .menu__header .menu__item-link {
   color: #fff;
   font-size: 20px;
   font-weight: 300;
   display: inline-block;
-  margin: 40px 20px;
+  margin: 40px 30px;
   text-decoration: none;
   position: relative;
 } 
 
-header .menu a:hover {
+header .menu__item .menu__item-link:hover {
   text-decoration: underline;
 }
 
@@ -111,13 +124,20 @@ header .textos h3 {
 
 .main .acerca-de article h3 {
   font-size: 50px;
-  font-weight: 300;
+  font-weight: 500;
   margin-bottom: 40px;
+  color: #59981a;
 }
 
 .main .acerca-de article p {
   line-height: 28px;
   margin-bottom: 15px;
+}
+
+.main article span {
+  color: var(--second-color);
+  font-weight: 600;
+  text-decoration: underline var(--primary-color);
 }
 
 .main .menu {
@@ -134,7 +154,7 @@ header .textos h3 {
 
 .main .menu .contenedor-menu,
 .main .menu .contenedor-menu2 {
-  border: 1px solid #000;
+  border: 1px solid var(--primary-color);
   background: transparent;
   padding: 10px;
   overflow: hidden;
@@ -256,15 +276,70 @@ header .textos h3 {
 
 /* ----------- FOOTEER --------*/
 
-footer {
-  background: #000;
-}
+/* footer {
+  background: var(--primary-color);
+} */
 
-footer .copyright {
+.copyright {
   text-align: center;
   padding: 15px 0;
   color: #fff;
+  border-top: 1px solid var(--primary-color);
+  background-color: var(--second-color);
 }
+
+footer {
+  background-color: var(--second-color);
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+  border-top: 4px solid var(--primary-color);
+}
+
+.contenedor__footer {
+  display: flex;
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.footer-col {
+  flex-basis: 25%;
+  margin-bottom: 20px;
+}
+
+.footer-col {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.footer-col h3 {
+  margin-bottom: 10px;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-col ul li {
+  margin-bottom: 5px;
+}
+
+.footer-col ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-col {
+    flex-basis: 50%;
+  }
+}
+
 
 /*-----------------MEDIA QUERISS---------------*/
 
